--- a/lib/components/Input/base/base.scss
+++ b/lib/components/Input/base/base.scss
@@ -1,12 +1,3 @@
-@keyframes dropIn {
-    from {
-        transform: translateY(-50%);
-    }
-    to {
-        transform: translateY(0);
-    }
-}
-
 .quill-input {
     &__container {
         display: flex;
@@ -21,7 +12,6 @@
             &__text {
                 padding-block: var(--semantic-spacing-general-none);
                 padding-inline: var(--semantic-spacing-general-md);
-                animation-name: dropIn;
                 transition-timing-function: var(--core-motion-ease-400);
                 animation-duration: var(--core-motion-duration-200);
 
@@ -62,10 +52,19 @@
             &:has(label) {
                 padding-top: var(--core-spacing-600);
             }
+
+            & > .label {
+                top: 0px;
+            }
         }
         &--has-value {
             &:has(label) {
+                top: 0px;
                 padding-top: var(--core-spacing-600);
+            }
+
+            & > .label {
+                top: 0px;
             }
         }
     }
@@ -124,13 +123,9 @@
                 }
             }
             &--outline {
-                background-color: var(
-                    --component-field-bg-outline-default
-                );
+                background-color: var(--component-field-bg-outline-default);
                 &:has(input:disabled) {
-                    background-color: var(
-                        --component-field-bg-outline-default
-                    );
+                    background-color: var(--component-field-bg-outline-default);
                     color: var(--core-color-opacity-black-100);
                     border-color: var(--core-color-opacity-black-100);
                 }
@@ -166,7 +161,9 @@
             }
             &--success {
                 color: var(--component-field-label-color-success);
-                border-color: var(--component-field-border-color-successDefault);
+                border-color: var(
+                    --component-field-border-color-successDefault
+                );
                 &:focus-within {
                     border-color: var(--core-color-solid-green-900);
                     color: var(--core-color-solid-green-900);
@@ -174,8 +171,12 @@
                 &:has(input:enabled) {
                     &:hover {
                         &:not(:focus-within) {
-                            color: var(--component-field-border-color-successHover);
-                            border-color: var(--component-field-border-color-successHover);
+                            color: var(
+                                --component-field-border-color-successHover
+                            );
+                            border-color: var(
+                                --component-field-border-color-successHover
+                            );
                         }
                     }
                 }
@@ -314,11 +315,9 @@
         .peer {
             &:placeholder-shown + .label {
                 font-size: var(--core-fontSize-100);
-                transform: translateY(0);
                 height: 100%;
             }
             &:focus + .label {
-                transform: translateY(-100%);
                 line-height: var(--core-lineHeight-100);
                 font-size: var(--core-fontSize-50);
                 height: var(--core-size-600);
@@ -331,10 +330,9 @@
                 }
             }
             &:not(placeholder-shown) + .label {
-                transform: translateY(-100%);
                 line-height: var(--core-lineHeight-100);
                 font-size: var(--core-fontSize-50);
-                height: var(--core-size-900);
+                height: var(--core-size-600);
 
                 &-field-marker {
                     font-size: var(
