chore: temporary commented linter

--- a/lib/components/Typography/typography.scss
+++ b/lib/components/Typography/typography.scss
@@ -127,4 +127,8 @@ $weights: regular, bold;
     &__body-text {
         @include customTypeTextStyles(body, true);
     }
+
+    &-centered {
+        text-align: center;
+    }
 }
