[DTRA] Henry/dtra 1149/snackbars queue (#73)

--- a/lib/components/Snackbar/snackbar.scss
+++ b/lib/components/Snackbar/snackbar.scss
@@ -10,29 +10,26 @@
     align-items: center;
     gap: var(--semantic-spacing-gap-md);
     border-radius: var(--semantic-borderRadius-md);
-    border: var(--borderWidth-xs) solid
-        var(--core-color-opacity-white-100);
+    border: var(--borderWidth-xs) solid var(--core-color-opacity-white-100);
     background: var(--core-color-solid-slate-1400);
     box-shadow: var(--core-elevation-shadow-330);
-    position: absolute;
+    position: fixed;
     z-index: 1;
-    bottom: -100%;
+    bottom: -16px;
     transition: bottom var(--motion-duration-snappy)
         var(--motion-easing-inandout);
 
-    &.slow-animation {
-        animation:
-            slide-up var(--motion-duration-snappy) var(--motion-easing-inandout)
-                forwards,
-            slide-down var(--motion-duration-snappy) var(--core-motion-duration-1300)
-                var(--motion-easing-inandout) forwards;
+    &--container {
+        display: flex;
+        justify-content: center;
     }
-    &.fast-animation {
-        animation:
-            slide-up var(--motion-duration-snappy) var(--motion-easing-inandout)
-                forwards,
-            slide-down var(--motion-duration-snappy) var(--core-motion-duration-800)
-                var(--motion-easing-inandout) forwards;
+
+    &.slide-up {
+        animation: slide-up var(--motion-duration-snappy) var(--motion-easing-inandout) forwards;
+    }
+
+    &.slide-down {
+        animation: slide-down var(--motion-duration-snappy) var(--motion-easing-inandout) forwards;
     }
 
     @include breakpoint("sm") {
@@ -69,7 +66,9 @@
             padding-right: var(--semantic-spacing-general-sm);
             align-items: flex-start;
             flex: 1 0 0;
-            min-width:  var(--semantic-spacing-general-none); /* Text broken up into another line for long words */
+            min-width: var(
+                --semantic-spacing-general-none
+            ); /* Text broken up into another line for long words */
         }
     }
 
@@ -77,21 +76,20 @@
         display: flex;
     }
 }
-
 @keyframes slide-up {
-    0% {
+    from {
         bottom: -100%;
     }
-    100% {
-        bottom: var(--core-size-1600);
+    to {
+        bottom: var(--core-size-800);
     }
 }
 
 @keyframes slide-down {
-    0% {
-        bottom: var(--core-size-1600);
+    from {
+        bottom: var(--core-size-800);
     }
-    100% {
+    to {
         bottom: -100%;
     }
 }
