fix: set message font-family to IBMPlexs

--- a/lib/components/Input/base/base.scss
+++ b/lib/components/Input/base/base.scss
@@ -41,6 +41,9 @@
                 font-weight: var(
                     --semantic-typography-caption-regular-default-fontWeight
                 );
+                font-family: var(
+                    --semantic-typography-caption-regular-default-fontFamily
+                );
             }
         }
         .icon_wrapper {
